[gd_scene load_steps=4 format=3 uid="uid://ujj3weu8qeo2"]

[ext_resource type="Script" uid="uid://boe0wdkbrtnsj" path="res://UI/settings_menu_screen.gd" id="1_b1ltk"]
[ext_resource type="Texture2D" uid="uid://m4sfaq76aj34" path="res://assets/Fantasy Swamp Forest/Free/Mockup.png" id="2_oabam"]
[ext_resource type="Theme" uid="uid://bywxjnoede6dr" path="res://UI/game_theme.tres" id="3_373f7"]

[node name="SettingsMenuScreen" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_b1ltk")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.49, 0.49, 0.49, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -9.0
offset_top = -32.0
offset_right = 951.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_oabam")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_373f7")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 75
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="WindowModeOptionButton" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "EXIT TO MAIN MENU"

[connection signal="item_selected" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/WindowModeOptionButton" to="." method="_on_window_mode_item_selected"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
